// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AddLinkDialog > should render 3 step with Add a link on-boarding content 1`] = `
"<!-- eslint-disable vue/no-v-model-argument -->
<!-- eslint-disable vue/no-v-model-argument -->
<transition-stub name=\\"cdx-dialog-fade\\" appear=\\"true\\" persisted=\\"false\\" css=\\"true\\">
  <div class=\\"cdx-dialog-backdrop\\">
    <div tabindex=\\"0\\"></div>
    <div class=\\"cdx-dialog cdx-dialog--horizontal-actions ext-growthExperiments-OnboardingDialog ext-growthExperiments-AddLinkDialog\\" role=\\"dialog\\" aria-label=\\"Introduction\\">
      <header class=\\"cdx-dialog__header\\">
        <div class=\\"ext-growthExperiments-OnboardingDialog__header\\">
          <div class=\\"ext-growthExperiments-OnboardingDialog__header__top\\">
            <h4 class=\\"ext-growthExperiments-OnboardingDialog__header__top__title\\">growthexperiments-structuredtask-onboarding-dialog-title:[]</h4><button class=\\"cdx-button cdx-button--action-default cdx-button--weight-quiet ext-growthExperiments-OnboardingDialog__header__top__button\\">growthexperiments-structuredtask-onboarding-dialog-label-skip-all:[]</button>
          </div>
          <div class=\\"ext-growthExperiments-OnboardingStepper ext-growthExperiments-OnboardingDialog__header__stepper\\">
            <p class=\\"ext-growthExperiments-OnboardingStepper__label\\">1 of 3</p>
            <div class=\\"ext-growthExperiments-OnboardingStepper__dots\\">
              <div class=\\"ext-growthExperiments-OnboardingStepper__dots__dot ext-growthExperiments-OnboardingStepper__dots__dot--active\\"></div>
              <div class=\\"ext-growthExperiments-OnboardingStepper__dots__dot\\"></div>
              <div class=\\"ext-growthExperiments-OnboardingStepper__dots__dot\\"></div>
            </div>
          </div>
        </div>
      </header>
      <div class=\\"cdx-dialog-focus-trap\\" tabindex=\\"-1\\"></div>
      <div class=\\"cdx-dialog__body\\">
        <div>
          <div class=\\"ext-growthExperiments-MultiPane\\">
            <transition-stub appear=\\"false\\" persisted=\\"false\\" css=\\"true\\">
              <div>
                <!-- eslint-disable max-len -->
                <div role=\\"img\\" aria-label=\\"Illustration of the moon article, with the articles Earth and Satellite being suggested as links that could be added to the associated text.\\" class=\\"ext-growthExperiments-AddLinkDialog__image ext-growthExperiments-AddLinkDialog__image--1\\">
                  <!-- eslint-enable max-len -->
                </div>
                <h5 class=\\"ext-growthExperiments-AddLinkDialog__title\\">growthexperiments-addlink-onboarding-content-intro-title:[]</h5>
                <div class=\\"ext-growthExperiments-AddLinkDialog__text\\">
                  <p>growthexperiments-addlink-onboarding-content-intro-body-paragraph1:[Alice]</p>
                  <div class=\\"ext-growthExperiments-AddLinkDialog__text__label\\">growthexperiments-addlink-onboarding-content-intro-body-example-label:[]</div><!-- eslint-disable-next-line max-len, vue/first-attribute-linebreak -->
                  <div class=\\"ext-growthExperiments-AddLinkDialog__text__example\\">growthexperiments-addlink-onboarding-content-intro-body-example-text</div>
                  <p>growthexperiments-addlink-onboarding-content-intro-body-paragraph2:[]</p>
                </div>
              </div>
            </transition-stub>
          </div>
        </div>
      </div>
      <footer class=\\"cdx-dialog__footer\\">
        <div class=\\"ext-growthExperiments-OnboardingDialog__footer\\"><span class=\\"cdx-checkbox ext-growthExperiments-OnboardingDialog__footer__permanent-action\\"><input id=\\"cdx-checkbox-1\\" class=\\"cdx-checkbox__input\\" type=\\"checkbox\\" value=\\"false\\"><span class=\\"cdx-checkbox__icon\\"></span><label class=\\"cdx-checkbox__label\\" for=\\"cdx-checkbox-1\\"> Don't show again </label></span>
          <div class=\\"ext-growthExperiments-OnboardingDialog__footer__navigation\\">
            <!-- eslint-disable max-len -->
            <!--v-if-->
            <!-- eslint-disable max-len -->
            <!-- eslint-disable max-len -->
            <div class=\\"ext-growthExperiments-OnboardingDialog__footer__navigation--next\\">
              <!-- eslint-enable max-len --><button class=\\"cdx-button cdx-button--action-progressive cdx-button--weight-primary cdx-button--framed cdx-button--icon-only cdx-button--icon-only\\" aria-label=\\"next\\"><span class=\\"cdx-icon cdx-icon--medium\\"><svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"20\\" height=\\"20\\" viewBox=\\"0 0 20 20\\"><title>next</title><g><path d=\\"M7 1 5.6 2.5 13 10l-7.4 7.5L7 19l9-9z\\"></path></g></svg></span></button>
            </div>
          </div>
        </div>
      </footer>
    </div>
    <div tabindex=\\"0\\"></div>
  </div>
</transition-stub>"
`;

exports[`AddLinkDialog > should render second step with Add a link on-boarding content 1`] = `
"<!-- eslint-disable vue/no-v-model-argument -->
<!-- eslint-disable vue/no-v-model-argument -->
<transition-stub name=\\"cdx-dialog-fade\\" appear=\\"true\\" persisted=\\"false\\" css=\\"true\\">
  <div class=\\"cdx-dialog-backdrop\\">
    <div tabindex=\\"0\\"></div>
    <div class=\\"cdx-dialog cdx-dialog--horizontal-actions ext-growthExperiments-OnboardingDialog ext-growthExperiments-AddLinkDialog\\" role=\\"dialog\\" aria-label=\\"Introduction\\">
      <header class=\\"cdx-dialog__header\\">
        <div class=\\"ext-growthExperiments-OnboardingDialog__header\\">
          <div class=\\"ext-growthExperiments-OnboardingDialog__header__top\\">
            <h4 class=\\"ext-growthExperiments-OnboardingDialog__header__top__title\\">growthexperiments-structuredtask-onboarding-dialog-title:[]</h4><button class=\\"cdx-button cdx-button--action-default cdx-button--weight-quiet ext-growthExperiments-OnboardingDialog__header__top__button\\">growthexperiments-structuredtask-onboarding-dialog-label-skip-all:[]</button>
          </div>
          <div class=\\"ext-growthExperiments-OnboardingStepper ext-growthExperiments-OnboardingDialog__header__stepper\\">
            <p class=\\"ext-growthExperiments-OnboardingStepper__label\\">2 of 3</p>
            <div class=\\"ext-growthExperiments-OnboardingStepper__dots\\">
              <div class=\\"ext-growthExperiments-OnboardingStepper__dots__dot ext-growthExperiments-OnboardingStepper__dots__dot--active\\"></div>
              <div class=\\"ext-growthExperiments-OnboardingStepper__dots__dot ext-growthExperiments-OnboardingStepper__dots__dot--active\\"></div>
              <div class=\\"ext-growthExperiments-OnboardingStepper__dots__dot\\"></div>
            </div>
          </div>
        </div>
      </header>
      <div class=\\"cdx-dialog-focus-trap\\" tabindex=\\"-1\\"></div>
      <div class=\\"cdx-dialog__body\\">
        <div>
          <div class=\\"ext-growthExperiments-MultiPane\\">
            <transition-stub appear=\\"false\\" persisted=\\"false\\" css=\\"true\\">
              <div>
                <!-- eslint-disable max-len -->
                <div role=\\"img\\" aria-label=\\"Illustration of the moon article, next to the article there's a robot representing a machine suggestion - asking if a word on the Moon article should be linked to the Cheese article.\\" class=\\"ext-growthExperiments-AddLinkDialog__image ext-growthExperiments-AddLinkDialog__image--2\\">
                  <!-- eslint-enable max-len -->
                </div>
                <h5 class=\\"ext-growthExperiments-AddLinkDialog__title\\">growthexperiments-addlink-onboarding-content-about-suggested-links-title:[]</h5>
                <div class=\\"ext-growthExperiments-AddLinkDialog__text\\">
                  <p>
                    <!-- eslint-disable-next-line max-len -->growthexperiments-addlink-onboarding-content-about-suggested-links-body:[Alice]
                  </p><a class=\\"ext-growthExperiments-AddLinkDialog__text__link\\" href=\\"\\">growthexperiments-addlink-onboarding-content-about-suggested-links-body-learn-more-link-text:[]</a>
                </div>
              </div>
            </transition-stub>
          </div>
        </div>
      </div>
      <footer class=\\"cdx-dialog__footer\\">
        <div class=\\"ext-growthExperiments-OnboardingDialog__footer\\"><span class=\\"cdx-checkbox ext-growthExperiments-OnboardingDialog__footer__permanent-action\\"><input id=\\"cdx-checkbox-3\\" class=\\"cdx-checkbox__input\\" type=\\"checkbox\\" value=\\"false\\"><span class=\\"cdx-checkbox__icon\\"></span><label class=\\"cdx-checkbox__label\\" for=\\"cdx-checkbox-3\\"> Don't show again </label></span>
          <div class=\\"ext-growthExperiments-OnboardingDialog__footer__navigation\\">
            <!-- eslint-disable max-len -->
            <div class=\\"ext-growthExperiments-OnboardingDialog__footer__navigation-prev\\">
              <!-- eslint-enable max-len --><button class=\\"cdx-button cdx-button--action-default cdx-button--weight-normal cdx-button--framed cdx-button--icon-only\\" aria-label=\\"previous\\"><span class=\\"cdx-icon cdx-icon--medium\\"><svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"20\\" height=\\"20\\" viewBox=\\"0 0 20 20\\"><title>previous</title><g><path d=\\"m4 10 9 9 1.4-1.5L7 10l7.4-7.5L13 1z\\"></path></g></svg></span></button>
            </div><!-- eslint-disable max-len -->
            <!-- eslint-disable max-len -->
            <div class=\\"ext-growthExperiments-OnboardingDialog__footer__navigation--next\\">
              <!-- eslint-enable max-len --><button class=\\"cdx-button cdx-button--action-progressive cdx-button--weight-primary cdx-button--framed cdx-button--icon-only cdx-button--icon-only\\" aria-label=\\"next\\"><span class=\\"cdx-icon cdx-icon--medium\\"><svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"20\\" height=\\"20\\" viewBox=\\"0 0 20 20\\"><title>next</title><g><path d=\\"M7 1 5.6 2.5 13 10l-7.4 7.5L7 19l9-9z\\"></path></g></svg></span></button>
            </div>
          </div>
        </div>
      </footer>
    </div>
    <div tabindex=\\"0\\"></div>
  </div>
</transition-stub>"
`;

exports[`AddLinkDialog > should render third step with Add a link on-boarding content 1`] = `
"<!-- eslint-disable vue/no-v-model-argument -->
<!-- eslint-disable vue/no-v-model-argument -->
<transition-stub name=\\"cdx-dialog-fade\\" appear=\\"true\\" persisted=\\"false\\" css=\\"true\\">
  <div class=\\"cdx-dialog-backdrop\\">
    <div tabindex=\\"0\\"></div>
    <div class=\\"cdx-dialog cdx-dialog--horizontal-actions ext-growthExperiments-OnboardingDialog ext-growthExperiments-AddLinkDialog\\" role=\\"dialog\\" aria-label=\\"Introduction\\">
      <header class=\\"cdx-dialog__header\\">
        <div class=\\"ext-growthExperiments-OnboardingDialog__header\\">
          <div class=\\"ext-growthExperiments-OnboardingDialog__header__top\\">
            <h4 class=\\"ext-growthExperiments-OnboardingDialog__header__top__title\\">growthexperiments-structuredtask-onboarding-dialog-title:[]</h4><button class=\\"cdx-button cdx-button--action-default cdx-button--weight-quiet ext-growthExperiments-OnboardingDialog__header__top__button\\">growthexperiments-structuredtask-onboarding-dialog-label-skip-all:[]</button>
          </div>
          <div class=\\"ext-growthExperiments-OnboardingStepper ext-growthExperiments-OnboardingDialog__header__stepper\\">
            <p class=\\"ext-growthExperiments-OnboardingStepper__label\\">3 of 3</p>
            <div class=\\"ext-growthExperiments-OnboardingStepper__dots\\">
              <div class=\\"ext-growthExperiments-OnboardingStepper__dots__dot ext-growthExperiments-OnboardingStepper__dots__dot--active\\"></div>
              <div class=\\"ext-growthExperiments-OnboardingStepper__dots__dot ext-growthExperiments-OnboardingStepper__dots__dot--active\\"></div>
              <div class=\\"ext-growthExperiments-OnboardingStepper__dots__dot ext-growthExperiments-OnboardingStepper__dots__dot--active\\"></div>
            </div>
          </div>
        </div>
      </header>
      <div class=\\"cdx-dialog-focus-trap\\" tabindex=\\"-1\\"></div>
      <div class=\\"cdx-dialog__body\\">
        <div>
          <div class=\\"ext-growthExperiments-MultiPane\\">
            <transition-stub appear=\\"false\\" persisted=\\"false\\" css=\\"true\\">
              <div>
                <!-- eslint-disable max-len -->
                <div role=\\"img\\" aria-label=\\"Illustration of an article sentence showing link suggestions for two different words. Next to the suggestion there's a blue check icon and a red cross icon for the options to accept or reject the suggestion.\\" class=\\"ext-growthExperiments-AddLinkDialog__image ext-growthExperiments-AddLinkDialog__image--3\\">
                  <!-- eslint-enable max-len -->
                </div>
                <h5 class=\\"ext-growthExperiments-AddLinkDialog__title\\">growthexperiments-addlink-onboarding-content-linking-guidelines-title:[]</h5>
                <div class=\\"ext-growthExperiments-AddLinkDialog__text\\">
                  <div class=\\"ext-growthExperiments-AddLinkDialog__text__list\\">
                    <!-- eslint-disable-next-line max-len -->
                    <ul>growthexperiments-addlink-onboarding-content-linking-guidelines-body</ul>
                  </div>
                </div>
              </div>
            </transition-stub>
          </div>
        </div>
      </div>
      <footer class=\\"cdx-dialog__footer\\">
        <div class=\\"ext-growthExperiments-OnboardingDialog__footer\\"><span class=\\"cdx-checkbox ext-growthExperiments-OnboardingDialog__footer__permanent-action\\"><input id=\\"cdx-checkbox-5\\" class=\\"cdx-checkbox__input\\" type=\\"checkbox\\" value=\\"false\\"><span class=\\"cdx-checkbox__icon\\"></span><label class=\\"cdx-checkbox__label\\" for=\\"cdx-checkbox-5\\"> Don't show again </label></span>
          <div class=\\"ext-growthExperiments-OnboardingDialog__footer__navigation\\">
            <!-- eslint-disable max-len -->
            <div class=\\"ext-growthExperiments-OnboardingDialog__footer__navigation-prev\\">
              <!-- eslint-enable max-len --><button class=\\"cdx-button cdx-button--action-default cdx-button--weight-normal cdx-button--framed cdx-button--icon-only\\" aria-label=\\"previous\\"><span class=\\"cdx-icon cdx-icon--medium\\"><svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"20\\" height=\\"20\\" viewBox=\\"0 0 20 20\\"><title>previous</title><g><path d=\\"m4 10 9 9 1.4-1.5L7 10l7.4-7.5L13 1z\\"></path></g></svg></span></button>
            </div><!-- eslint-disable max-len -->
            <div class=\\"ext-growthExperiments-OnboardingDialog__footer__navigation--next\\">
              <!-- eslint-enable max-len --><button class=\\"cdx-button cdx-button--action-progressive cdx-button--weight-primary cdx-button--framed\\"> Get started </button>
            </div>
          </div>
        </div>
      </footer>
    </div>
    <div tabindex=\\"0\\"></div>
  </div>
</transition-stub>"
`;
